--- a/docs/jamesdocs.tex
+++ b/docs/jamesdocs.tex
@@ -126,6 +126,10 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
+\hypertarget{preface}{%
+\chapter*{Preface}\label{preface}}
+\addcontentsline{toc}{chapter}{Preface}
+
 This document contains minimal documentation of JAMES internals.
 
 \hypertarget{intro}{%
